# xinfer

./: CMakeLists.txt  README.md  requirements.txt
cmake/: CheckCXXLinkerFlag.cmake  ExportHeader.cmake
examples/: README.md
examples/migraphx/: README.md
examples/migraphx/cpp_dynamic_batch/: dynamic_batch.cpp
src/: CMakeLists.txt  adjust_allocation.cpp  analyze_streams.cpp  auto_contiguous.cpp  json.cpp
src/api/: CMakeLists.txt
src/driver/: CMakeLists.txt
src/include/migraphx/: operation.hpp
src/onnx/: CMakeLists.txt  onnx.cpp  onnx_parser.cpp  op_parser.cpp  parse_arg_op.cpp
src/targets/cpu/: CMakeLists.txt
test/api/: test_array_base.cpp  test_assign.cpp  test_c_op_construct.c  test_compile_options.cpp  test_cpu.cpp  test_gpu.cpp  test_module_construct.cpp  test_save_load.cpp
